--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -23,6 +23,13 @@
         <div class="col mb-3">
         <label for="lastname" class="form-label">Last Name</label>
         <input type="text" class="form-control" id="lastname" formControlName="lastname">
+        <div class="form-text text-danger" *ngIf="LastName.errors?.['required']&&(LastName.touched||LastName.dirty)">
+            Last Name is Required
+        </div>
+<div class="form-text text-danger" *ngIf="LastName.errors?.
+['pattern']&&(LastName.dirty||LastName.touched)">
+Last Name should start with Alphabet
+</div>
         </div>
     </div>
 
@@ -30,12 +37,19 @@
         <div class="col">
             <label for="email" class="form-label">Email Address</label>
             <input type ="email" class="form-control" id="email" formControlName="email">
+            <div class="form-text text-danger" *ngIf="Email.errors?.['required']&&(Email.dirty||Email.touched)">
+                Email is Required
+            </div>
+            <div class="form-text text-danger" *ngIf="Email.errors?.['email']&&(Email.dirty||Email.touched)">
+                Email is Invalid
+            </div>
             <div class="form-text"></div>
         </div>
     <div class="row">
         <div class="col mb-3">
         <label for="mobile" class="form-label">Mobile Number</label>
         <input type="text" class="form-control" id="mobile" formControlName="mobile">
+        
         <div class="form-text"></div>
         </div>
     <div class="col ps-3 mb-3">
