--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,6 @@
+<p class="text-center fs-3"[ngClass]="isAccountCreated? 'text-success pb-1':'text-danger pb-1'">
+    {{displayMsg}}
+</p>
 <form [formGroup]="registerForm"(ngSubmit)="registerSubmitted()" class="border p-3 rounded-3 container">
     <div class="row g-0">
         <div class="col text-center p-2 mb-3 bg-light">
